--- a/myskill-residence-property/tipe_rumah.html
+++ b/myskill-residence-property/tipe_rumah.html
@@ -37,7 +37,7 @@
               <a href="./index.html" class="nav_menu_link">Beranda</a>
             </li>
             <li class="nav_menu_item">
-              <a href="./tipe_rumah.html" class="nav_menu_link">Tipe Rumah</a>
+              <a href="./tipe_rumah.html" class="nav_menu_link menu_active">Tipe Rumah</a>
             </li>
             <li class="nav_menu_item">
               <a href="./tentang.html" class="nav_menu_link">Tentang Kami</a>
@@ -46,7 +46,7 @@
               <a href="./kontak.html" class="nav_menu_link">Kontak</a>
             </li>
             <li class="nav_menu_item">
-              <a href="./blog.html" class="nav_menu_link menu_active">Blog</a>
+              <a href="./blog.html" class="nav_menu_link">Blog</a>
             </li>
           </ul>
         </div>
@@ -60,11 +60,11 @@
     <!-- header -->
 
     <!-- container title -->
-    <section class="wrapper-content blog">
+    <section class="wrapper-content title_tipe_rumah">
         <div class="container-fluid">
             <div class="row" id="content-title">
                 <div class="col-md-12 text-center">
-                    <h2>Blog MySkill Residence</h2>
+                    <h2>Tipe Rumah</h2>
                 </div>
             </div>
         </div>
@@ -72,22 +72,14 @@
     <!-- container title -->
 
     <!-- section content -->
-    <div class="container pt-2 pb-4 mb-3 blog">
-        <div class="row">
-            <div class="col-md-9 mt-4 mb-4" id="blogContainer">
-                <!-- content dynamically generated -->
-            </div>
-            <div class="col-md-3 mt-4 mb-4">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="search blog..." autocomplete="off" onchange="searchBlog(this)" />
-                    <div class="latest-post mt-3 mb-3">
-                        <p class="text-latest-post">LATEST POST</p>
-                    </div>
-                    <div class="latest-blog-content" id="latestBlogContent">
-                         <!-- content dynamically generated -->
-                    </div>
-                </div>
-            </div>
+    <div class="container pt-4 pb-4 mt-2 mb-3 tipe_rumah">
+        <h1 class="text-center my-5">Hunian Bergaya Modern</h1>
+        <br>
+        <div class="row tipe_website_view" id="rumahContainer">
+            <!-- this content -->
+        </div>
+        <div class="row tipe_mobile_view" id="rumahContainerMobile">
+            <!-- this content -->
         </div>
     </div>
     <!-- section content -->
